packages/engine/src/tests/snapshots/engine__tests__partition__broken_incomplete_fence_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 2,
    "width": 63.76,
    "height": 22.4,
    "x": 0.0,
    "y": -0.64
  },
  {
    "range": [
      9,
      22
    ],
    "items": 10,
    "width": 35.76,
    "height": 104.32,
    "x": 0.0,
    "y": 40.32
  },
  {
    "range": [
      24,
      51
    ],
    "items": 5,
    "width": 94.64,
    "height": 89.6,
    "x": 0.0,
    "y": 163.2
  }
]
