packages/engine/src/tests/snapshots/engine__tests__partition__broken_incomplete_fence_eof_diagnostics.snap
---
source: packages/engine/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 23,
      "end": 23
    },
    "severity": "warning",
    "message": "unclosed raw block; inserted a closing fence",
    "hints": []
  }
]
