packages/engine/src/tests/snapshots/engine__tests__partition__broken_incomplete_fence_lang_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 4,
    "width": 63.76,
    "height": 22.4,
    "x": 0.0,
    "y": -0.64
  },
  {
    "range": [
      9,
      24
    ],
    "items": 11,
    "width": 18.08,
    "height": 95.1,
    "x": 0.0,
    "y": 40.32
  },
  {
    "range": [
      26,
      53
    ],
    "items": 5,
    "width": 94.64,
    "height": 89.6,
    "x": 0.0,
    "y": 153.98
  }
]
