packages/engine/src/tests/snapshots/engine__tests__partition__broken_incomplete_fence_long_run_diagnostics.snap
---
source: packages/engine/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 23,
      "end": 24
    },
    "severity": "warning",
    "message": "unclosed raw block; inserted a closing fence",
    "hints": []
  }
]
