packages/engine/src/tests/snapshots/engine__tests__partition__broken_incomplete_fence_no_blank_chunks.snap
---
source: packages/engine/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 2,
    "width": 63.76,
    "height": 22.4,
    "x": 0.0,
    "y": -0.64
  },
  {
    "range": [
      9,
      51
    ],
    "items": 18,
    "width": 102.64,
    "height": 193.92,
    "x": 0.0,
    "y": 40.32
  }
]
