packages/engine/src/tests/snapshots/engine__tests__partition__broken_incomplete_fence_no_blank_diagnostics.snap
---
source: packages/engine/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 51,
      "end": 51
    },
    "severity": "warning",
    "message": "unclosed raw block; inserted a closing fence",
    "hints": []
  }
]
